--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll-to-bottom": "^4.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.2",
     "concurrently": "^8.0.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -22,6 +24,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
